--- a/language/i18n_hi.json
+++ b/language/i18n_hi.json
@@ -4025,5 +4025,6 @@
     "CL_DV_DW_water_energy": "जल एवं ऊर्जा",
     "CL_DV_DW_light_display": "प्रकाश और प्रदर्शन",
     "CL_DV_HOB_how_to_connect_accessories": "सहायक उपकरण कैसे कनेक्ट करें",
-    "CL_CF_SK_amount_of_servings": "सर्विंग की मात्रा"
+    "CL_CF_SK_amount_of_servings": "सर्विंग की मात्रा",
+    "CL_CF_CS_name_duplicate_tip": "उपकरण का नाम पहले से मौजूद है"
 }
