--- a/language/i18n_ko.json
+++ b/language/i18n_ko.json
@@ -4025,5 +4025,6 @@
     "CL_DV_DW_water_energy": "물과 에너지",
     "CL_DV_DW_light_display": "조명 및 디스플레이",
     "CL_DV_HOB_how_to_connect_accessories": "액세서리 연결 방법",
-    "CL_CF_SK_amount_of_servings": "제공량"
+    "CL_CF_SK_amount_of_servings": "제공량",
+    "CL_CF_CS_name_duplicate_tip": "기기 이름이 이미 존재합니다"
 }
