--- a/language/i18n_ar.json
+++ b/language/i18n_ar.json
@@ -4025,5 +4025,6 @@
     "CL_DV_DW_water_energy": "المياه والطاقة",
     "CL_DV_DW_light_display": "الإضاءة والعرض",
     "CL_DV_HOB_how_to_connect_accessories": "كيفية توصيل الملحقات",
-    "CL_CF_SK_amount_of_servings": "كمية الحصص"
+    "CL_CF_SK_amount_of_servings": "كمية الحصص",
+    "CL_CF_CS_name_duplicate_tip": "اسم الجهاز موجود بالفعل"
 }
