--- a/language/i18n_bg.json
+++ b/language/i18n_bg.json
@@ -4025,5 +4025,6 @@
     "CL_DV_DW_water_energy": "Вода и енергия",
     "CL_DV_DW_light_display": "Светлина и дисплей",
     "CL_DV_HOB_how_to_connect_accessories": "Как да свържете аксесоари",
-    "CL_CF_SK_amount_of_servings": "Количество порции"
+    "CL_CF_SK_amount_of_servings": "Количество порции",
+    "CL_CF_CS_name_duplicate_tip": "Името на уреда вече съществува"
 }
