--- a/language/i18n_da.json
+++ b/language/i18n_da.json
@@ -4025,5 +4025,6 @@
     "CL_DV_DW_water_energy": "Vand & Energi",
     "CL_DV_DW_light_display": "Lys & Display",
     "CL_DV_HOB_how_to_connect_accessories": "Sådan tilslutter du tilbehør",
-    "CL_CF_SK_amount_of_servings": "Antal portioner"
+    "CL_CF_SK_amount_of_servings": "Antal portioner",
+    "CL_CF_CS_name_duplicate_tip": "Apparatets navn findes allerede"
 }
