--- a/language/i18n_he.json
+++ b/language/i18n_he.json
@@ -4025,5 +4025,6 @@
     "CL_DV_DW_water_energy": "מים ואנרגיה",
     "CL_DV_DW_light_display": "אור ותצוגה",
     "CL_DV_HOB_how_to_connect_accessories": "כיצד לחבר אביזרים",
-    "CL_CF_SK_amount_of_servings": "כמות מנות"
+    "CL_CF_SK_amount_of_servings": "כמות מנות",
+    "CL_CF_CS_name_duplicate_tip": "שם המכשיר כבר קיים"
 }
