--- a/language/i18n_mk_MK.json
+++ b/language/i18n_mk_MK.json
@@ -4025,5 +4025,6 @@
     "CL_DV_DW_water_energy": "Вода и енергија",
     "CL_DV_DW_light_display": "Светло и дисплеј",
     "CL_DV_HOB_how_to_connect_accessories": "Како да поврзете додатоци",
-    "CL_CF_SK_amount_of_servings": "Количина на порции"
+    "CL_CF_SK_amount_of_servings": "Количина на порции",
+    "CL_CF_CS_name_duplicate_tip": "Името на апаратот веќе постои"
 }
