--- a/language/i18n_pt.json
+++ b/language/i18n_pt.json
@@ -4025,5 +4025,6 @@
     "CL_DV_DW_water_energy": "Água e Energia",
     "CL_DV_DW_light_display": "Luz e Exibição",
     "CL_DV_HOB_how_to_connect_accessories": "Como conectar acessórios",
-    "CL_CF_SK_amount_of_servings": "Quantidade de porções"
+    "CL_CF_SK_amount_of_servings": "Quantidade de porções",
+    "CL_CF_CS_name_duplicate_tip": "O nome do aparelho já existe"
 }
