--- a/language/i18n_sv.json
+++ b/language/i18n_sv.json
@@ -4025,5 +4025,6 @@
     "CL_DV_DW_water_energy": "Vatten & Energi",
     "CL_DV_DW_light_display": "Ljus & Display",
     "CL_DV_HOB_how_to_connect_accessories": "Hur man ansluter tillbehör",
-    "CL_CF_SK_amount_of_servings": "Antal portioner"
+    "CL_CF_SK_amount_of_servings": "Antal portioner",
+    "CL_CF_CS_name_duplicate_tip": "Apparatens namn finns redan"
 }
