--- a/language/i18n_sr_BA.json
+++ b/language/i18n_sr_BA.json
@@ -4025,5 +4025,10 @@
     "CL_DV_DW_water_energy": "Вода и енергија",
     "CL_DV_DW_light_display": "Светло и дисплеј",
     "CL_DV_HOB_how_to_connect_accessories": "Како повезати додатну опрему",
-    "CL_CF_SK_amount_of_servings": "Количина порција"
+    "CL_CF_SK_amount_of_servings": "Количина порција",
+    "CL_CF_CS_name_duplicate_tip": "Назив уређаја већ постоји",
+    "CL_DV_OV_your_oven_is_offline": "Ваша пећница је ван мреже",
+    "CL_DV_OV_offline_tips": "Неке функције се не могу користити када је пећница ван мреже. Покушајте поново да повежете пећницу.",
+    "CL_DV_OV_combi": "цомби",
+    "share_account": "ДЕЉЕНИ НАЛОГИ"
 }
