--- a/language/i18n_zh_CN.json
+++ b/language/i18n_zh_CN.json
@@ -407,7 +407,7 @@
     "service_go_user_profile": "转到用户设置",
     "room_edit_save_no_network": "网络无效",
     "add_washing_machine": "1.当机器关闭时，同时按住最右边的两个按钮打开机器。2.按\"Settings\"按钮进入设置菜单，并将旋钮切换到\"Wi-Fi settings\"部分，按下按钮进入。3.按下\"Wi-Fi On/Off\"按钮，将旋钮切换到\"On\"选项，然后按下\"Save\"按钮。4.返回\"Wi-Fi settings\"部分，按\"Connection setup\"按钮；您有5分钟时间将设备连接到网络。",
-    "paring_set_up_appliance_label": "设置设备家庭网络连接设置，并将其与您的账户配对。",
+    "paring_set_up_appliance_label": "设置设备连接家庭网络，并将其与您的账户配对。",
     "paring_appliances_label": "将设备与您的账户配对。设备设置为您的家庭网络连接。",
     "paring_set_up_appliances_title": "设置设备",
     "upgrade_fail": "升级失败",
@@ -490,7 +490,7 @@
     "check_afota_hint": "检查设备固件更新。",
     "rename_failed": "设备重命名失败。",
     "pair_appliance": "配对设备",
-    "pair_content_title": "只需将另一个用户与您的设备配对即可。此操作要求您的设备已设置并连接到您的家庭网络。如果没有，请返回并首先选择“连接设置”。",
+    "pair_content_title": "只需将另一个用户与您的设备配对即可。此操作要求您的设备已设置并连接到您的家庭网络。如果没有，请选择“设置网络连接”。",
     "add_appliance_pair_failed": "m",
     "Super_cool": "速冷",
     "Fast_freeze": "速冻",
@@ -626,8 +626,8 @@
     "dw_config_wifi_step3_pair": "导航到\"配对\"并用菜单 确认。此设备的网络现在开放连接，持续2分钟。 单击“下一步”继续。",
     "oven_config_wifi_step1": "将设备设置为'开'。 触摸主屏幕上左上角的加号打开'加号' 菜单。选择“设置”。 选择\"网络连接\"。",
     "oven_config_wifi_step2": "如果左上角\"加号\"图标旁边的“无线网络” 图标可见，您可以跳过此步骤。 如果没有显示“无线网络”图标: 选择'无线网络关闭/ 开启'。选择 '开' 并触摸确认键。 设备无线网络连接准备就绪（主屏幕上的灰色 静态“无线网络”符号）。",
-    "oven_config_wifi_step3": "选择'连接设置'。 选择'Soft AP (S)'并触摸 确认按钮。 该设备的网络现在开放 连接，持续5分钟。您会看到 一个弹出窗口，上面有一个倒计时的定时器。 点击 \"下一步 \"继续。",
-    "oven_config_wifi_step2_pair": "选择'连接设置'。 选择'配对(P)'，然后触摸确认键。 该设备的网络现在开放 连接，请等待5分钟。您会看到 一个弹出窗口，上面有一个倒计时的定时器。 点击“下一步”继续。",
+    "oven_config_wifi_step3": "选择'设置网络连接'。 选择'Soft AP (S)'并触摸 确认按钮。 该设备的网络现在开放 连接，持续5分钟。您会看到 一个弹出窗口，上面有一个倒计时的定时器。 点击 \"下一步 \"继续。",
+    "oven_config_wifi_step2_pair": "选择'设置网络连接'。 选择'配对(P)'，然后触摸确认键。 该设备的网络现在开放 连接，请等待5分钟。您会看到 一个弹出窗口，上面有一个倒计时的定时器。 点击“下一步”继续。",
     "hob_config_wifi_step1": "要在您的设备上启用 无线网络，设备必须处于节能模式（儿童锁 按钮旁边的红灯不断缓慢 亮起和熄灭）。按住儿童锁定键约5秒钟。 听到声音，红点消失。继续按下 ，直到再次听到声音，并显示“无线网络”符号 键。",
     "hob_config_wifi_step2": "按住“无线网络”键大约5秒钟。出现A\\-键和+键。",
     "hob_config_wifi_step3": "用-键或+键导航选择\"S\"。显示屏上将显示\"S\"。",
@@ -744,7 +744,7 @@
     "atag_hood_type2_wifi_step3": "3 秒后将返回 Wi-Fi 菜单。",
     "atag_hood_type2_wifi_step5": "通过触摸定时器键确认连接模式。连接时速度级别 2 指示灯和 Wi-Fi 指示灯闪烁。此模式将在 5 分钟后自动关闭。",
     "atag_hood_type2_pair_step1": "将设备设置为待机模式（电机不运行）。触摸并按住 Wi-Fi 键约 3 秒钟。 Wi-Fi 指示灯将闪烁 3 次。",
-    "atag_hood_type2_pair_step2": "同时按下 +（加号）和定时器按钮以访问“连接设置”。",
+    "atag_hood_type2_pair_step2": "同时按下 +（加号）和定时器按钮以访问“设置网络连接”。",
     "atag_hood_type2_pair_step4": "通过触摸定时器键启动配对模式。配对时速度级别 3 指示灯和 Wi-Fi 指示灯闪烁。此模式将在 3 分钟后自动关闭。单击下一步继续。",
     "atag_hood_type3_wifi_step1": "如果遥控器连接到您的油烟机，您可以跳过此步骤。在油烟机接通电源后 5 分钟内，将遥控器连接到油烟机，按住“C”和“W”键约 3 秒钟。等待灯闪烁。您的遥控器现在已连接到油烟机。",
     "atag_hood_type3_wifi_step2": "必须关闭通风和灯光。按住 — 和 + 键约 3 秒钟。等待灯闪烁。",
@@ -1605,7 +1605,7 @@
     "Each_appliance_has_an_label": "每个设备都有一个标签，其中包含有关设备的信息，如下图所示。",
     "They_are_located_mostly": "它们主要位于门或门框的内部，或设备的背面/底部。",
     "qr_code_or_auid_are_normally": "AUID或SN 通常也出现在设备包装和设备的使用者手册上。",
-    "connection_setup": "连接设置",
+    "connection_setup": "设置网络连接",
     "enter_your_home_network": "输入您的家庭网络凭据以连接设备。",
     "wifi_name": "Wi-Fi名称(SSID)",
     "open_remote_control": "请打开远程控制开关",
@@ -1690,8 +1690,8 @@
     "pump_setup_2": "根据 APP 上显示的提示连接到 Wi-Fi。当连接成功或 AP 模式持续 5 分钟时，屏幕恢复正常显示。",
     "enter_the_auid_sn_code": "请输入AUID/SN码",
     "wine_2_zone_cs_2": "如果 WLAN 已关闭，请点击右箭头将其打开。",
-    "wine_2_zone_cs_3": "使用显示屏右侧的箭头键，导航到“连接设置”并确认。\n点击确认键确认“连接设置”。",
-    "wine_2_zone_cs_4": "点击确认键确认“连接设置”。",
+    "wine_2_zone_cs_3": "使用显示屏右侧的箭头键，导航到“设置网络连接”并确认。\n点击确认键确认“设置网络连接”。",
+    "wine_2_zone_cs_4": "点击确认键确认“设置网络连接”。",
     "wine_2_zone_cs_5": "当显示屏显示“正在连接...”且确认键和 Wi-Fi 符号闪烁时，表示设备已准备好连接。\n单击“下一步”继续。",
     "wine_2_zone_pair_1": "点击齿轮图标进入“设置菜单”。导航至“连接”并确认。",
     "wine_2_zone_pair_2": "使用显示屏右侧的箭头键导航到“配对”。\n点击确认键进行确认。",
@@ -1991,7 +1991,7 @@
     "washer_atag_cs_step4": "此设备的网络现在已经开启可以进行连接。\n点击“下一步”继续。",
     "bio14_cs_step1": "将设备设置为'开'。 触摸主屏幕上左上角的加号打开'加号' 菜单。选择“设置”。 选择\"网络连接\"。",
     "bio14_cs_step2": "如果左上角\"加号\"图标旁边的“无线网络” 图标可见，您可以跳过此步骤。 如果没有显示“无线网络”图标: 选择'无线网络关闭/ 开启'。选择 '开' 并触摸确认键。 设备无线网络连接准备就绪（主屏幕上的灰色 静态“无线网络”符号）。",
-    "bio14_cs_step3": "选择“连接设置”并点击“设置”确认。\n倒计时器将会弹出。\n设备网络现已开放连接，持续时间为 5 分钟。\n单击“下一步”继续。",
+    "bio14_cs_step3": "选择“设置网络连接”并点击“设置”确认。\n倒计时器将会弹出。\n设备网络现已开放连接，持续时间为 5 分钟。\n单击“下一步”继续。",
     "bio14_p_step1": "将设备设置为'开'。 触摸主屏幕上左上角的加号打开'加号' 菜单。 选择'设置'。 选择 \"网络连接\"。",
     "bio14_p_step2": "选择“配对”并点击“配对”确认。\n倒计时器将会弹出。\n设备网络现已开放配对，等待 3 分钟。\n单击“下一步”继续。",
     "oven_atag_mode_68": "大型烤牛排专业",
@@ -3565,7 +3565,7 @@
     "start_the_program_and_insert_dish": "启动程序，预热后放入菜肴。",
     "browse_more_recipes": "浏览更多食谱",
     "no_scheduling_set": "没有时间表",
-    "add_new": "添加新",
+    "add_new": "新添加",
     "chef_recipe": "厨师食谱",
     "recipe_assistant": "菜谱助理",
     "shopping_list": "购物清单",
@@ -3934,7 +3934,7 @@
     "energy_saved_tip_key": "实际使用：## kWh 节省：** kWh",
     "asko_oven_egg_time": "鸡蛋计时器",
     "wm86_and_td76_ui2_step1": "打开设备。向左旋转旋钮以访问“更多”，点击进入。",
-    "wm86_and_td76_ui2_cs_step2": "点击进入“Wi-Fi”设置。在 Wi-Fi 设置下选择“连接设置”。",
+    "wm86_and_td76_ui2_cs_step2": "点击进入“Wi-Fi”设置。在 Wi-Fi 设置下选择“设置网络连接”。",
     "wm86_and_td76_step3": "忽略屏幕上的说明，然后单击“下一步”两次。",
     "wm86_and_td76_step4": "设备网络现已开放连接，持续时间为 5 分钟。\n单击“下一步”继续。",
     "wm86_and_td76_ui2_p_step2": "点击进入“Wi-Fi”设置。在Wi-Fi设置下选择“配对设备”。",
@@ -4025,5 +4025,10 @@
     "CL_DV_DW_water_energy": "水和能源",
     "CL_DV_DW_light_display": "灯光与显示",
     "CL_DV_HOB_how_to_connect_accessories": "如何连接配件",
-    "CL_CF_SK_amount_of_servings": "份量"
+    "CL_CF_SK_amount_of_servings": "份量",
+    "CL_CF_CS_name_duplicate_tip": "设备名称已存在",
+    "CL_DV_OV_your_oven_is_offline": "您的烤箱处于离线状态",
+    "CL_DV_OV_offline_tips": "烤箱离线时某些功能无法使用。请尝试重新连接烤箱。",
+    "CL_DV_OV_combi": "组合",
+    "share_account": "共享账户"
 }
