--- a/language/i18n_zh_TW.json
+++ b/language/i18n_zh_TW.json
@@ -490,7 +490,7 @@
     "check_afota_hint": "檢查設備的硬體更新。",
     "rename_failed": "設備重新命名失敗。",
     "pair_appliance": "配對設備",
-    "pair_content_title": "只需將另一個用戶與您的設備配對即可。此操作要求您的設備已設置並連接到您的家庭網絡。如果沒有，請返回並首先選擇“連接設置”。",
+    "pair_content_title": "只需將另一個用戶與您的設備配對即可。此操作要求您的設備已設置並連接到您的家庭網絡。如果沒有，請先選擇“設置網絡連接”。",
     "add_appliance_pair_failed": "配對失敗",
     "Super_cool": "速冷",
     "Fast_freeze": "速冻",
@@ -744,7 +744,7 @@
     "atag_hood_type2_wifi_step3": "3 秒後將返回 Wi-Fi 菜單。",
     "atag_hood_type2_wifi_step5": "通過觸摸定時器鍵確認連接模式。連接時速度級別 2 指示燈和 Wi-Fi 指示燈閃爍。此模式將在 5 分鐘後自動關閉。",
     "atag_hood_type2_pair_step1": "將設備設置為待機模式（電機不運行）。觸摸並按住 Wi-Fi 鍵約 3 秒鐘。 Wi-Fi 指示燈將閃爍 3 次。",
-    "atag_hood_type2_pair_step2": "同時按下 +（加號）和定時器按鈕以訪問“連接設置”。",
+    "atag_hood_type2_pair_step2": "同時按下 +（加號）和定時器按鈕以訪問“設置網絡連接”。",
     "atag_hood_type2_pair_step4": "通過觸摸定時器鍵啟動配對模式。配對時速度級別 3 指示燈和 Wi-Fi 指示燈閃爍。此模式將在 3 分鐘後自動關閉。單擊下一步繼續。",
     "atag_hood_type3_wifi_step1": "如果遙控器連接到您的油煙機，您可以跳過此步驟。在油煙機接通電源後 5 分鐘內，將遙控器連接到油煙機，按住“C”和“W”鍵約 3 秒鐘。等待燈閃爍。您的遙控器現在已連接到油煙機。",
     "atag_hood_type3_wifi_step2": "必須關閉通風和燈光。按住 — 和 + 鍵約 3 秒鐘。等待燈閃爍。",
@@ -1605,7 +1605,7 @@
     "Each_appliance_has_an_label": "每個設備都有一個規格標籤，其中包含有關設備的資訊，如下圖所示。",
     "They_are_located_mostly": "它們主要位於門或門框的內部，或設備的背面/底部。",
     "qr_code_or_auid_are_normally": "AUID或SN 通常也出現在設備包裝和設備的使用手冊上。",
-    "connection_setup": "連接設定",
+    "connection_setup": "設置網絡連接",
     "enter_your_home_network": "輸入您的家庭網路憑證以連接設備。",
     "wifi_name": "Wi-Fi名稱(SSID)",
     "open_remote_control": "請打開遙控開關",
@@ -1690,8 +1690,8 @@
     "pump_setup_2": "根據 APP 上顯示的提示連接到 Wi-Fi。 當連接成功或 AP 模式持續 5 分鐘時，屏幕恢復正常顯示。",
     "enter_the_auid_sn_code": "請輸入AUID/SN碼",
     "wine_2_zone_cs_2": "如果 WLAN 已關閉，請點選向右箭頭將其開啟。",
-    "wine_2_zone_cs_3": "使用顯示幕右側的箭頭鍵導覽至「連線設定」並確認。\n點選確認鍵確認「連線設定」。",
-    "wine_2_zone_cs_4": "點選確認鍵確認「連線設定」。",
+    "wine_2_zone_cs_3": "使用顯示幕右側的箭頭鍵導覽至「設置網絡連接」並確認。\n點選確認鍵確認「設置網絡連接」。",
+    "wine_2_zone_cs_4": "點選確認鍵確認「設置網絡連接」。",
     "wine_2_zone_cs_5": "當顯示幕顯示「正在連線...」且確認鍵和 Wi-Fi 符號閃爍時，裝置已準備好連線。\n按一下“下一步”繼續。",
     "wine_2_zone_pair_1": "點擊齒輪圖示進入「設定選單」。導航至“連接”並確認。",
     "wine_2_zone_pair_2": "使用顯示器右側的箭頭鍵導覽至「配對」。\n點選確認鍵進行確認。",
@@ -1991,7 +1991,7 @@
     "washer_atag_cs_step4": "此裝置的網路現在已經開啟可以進行連線。\n點擊“下一步”繼續。",
     "bio14_cs_step1": "設定該設備為“開啟”。\n 在主螢幕，按著在\n左上角加號 ，打開“Plus” \n 目錄。\n選擇“設定”\n選擇“NETWORK CONNECTION”。",
     "bio14_cs_step2": "如果無線網絡連接標記旁邊見到左上\n 角的“plus”標記，您可以跳過這一步。\n 如果沒有顯示無線網絡連接標記：選擇“無線網絡 OFF / \n 開啟”。選擇“ON”並按著確認鍵。\n 設備無線網絡是可隨時連接（在主螢幕上灰色\n 靜止無線指示）。",
-    "bio14_cs_step3": "選擇“連線設定”並點選“設定”進行確認。\n將會彈出倒數計時器。\n設備網路現已開放，可供連接 5 分鐘。\n按一下“下一步”繼續。",
+    "bio14_cs_step3": "選擇“設置網絡連接”並點選“設定”進行確認。\n將會彈出倒數計時器。\n設備網路現已開放，可供連接 5 分鐘。\n按一下“下一步”繼續。",
     "bio14_p_step1": "設定該設備為“開啟”。 \n 在主螢幕，按著在\n左上角加號 ，打開“Plus” \n 目錄。\n選擇“設定”\n選擇“NETWORK CONNECTION”。",
     "bio14_p_step2": "選擇“配對”並點擊“配對”進行確認。\n將會彈出倒數計時器。\n設備網路現已開放，可供配對 3 分鐘。\n按一下“下一步”繼續。",
     "oven_atag_mode_68": "大型烤肉牛排專業版",
@@ -3565,7 +3565,7 @@
     "start_the_program_and_insert_dish": "啟動程序並預熱後插入盤子。",
     "browse_more_recipes": "瀏覽更多食譜",
     "no_scheduling_set": "沒有時間表",
-    "add_new": "添加新",
+    "add_new": "新添加",
     "chef_recipe": "廚師食譜",
     "recipe_assistant": "食譜助理",
     "shopping_list": "購物清單",
@@ -3934,7 +3934,7 @@
     "energy_saved_tip_key": "實際使用：## kWh 節省：** kWh",
     "asko_oven_egg_time": "煮蛋計時器",
     "wm86_and_td76_ui2_step1": "打開設備。向左轉動旋鈕可存取“更多”，然後點擊進入。",
-    "wm86_and_td76_ui2_cs_step2": "點選進入“Wi-Fi”設定。在 Wi-Fi 設定下選擇「連線設定」。",
+    "wm86_and_td76_ui2_cs_step2": "點選進入“Wi-Fi”設定。在 Wi-Fi 設定下選擇「設置網絡連接」。",
     "wm86_and_td76_step3": "忽略螢幕上的說明，然後按一下「下一步」兩次。",
     "wm86_and_td76_step4": "設備網路現已開放，可供連接 5 分鐘。\n按一下“下一步”繼續。",
     "wm86_and_td76_ui2_p_step2": "點選進入“Wi-Fi”設定。在 Wi-Fi 設定下選擇「配對裝置」。",
@@ -4025,5 +4025,10 @@
     "CL_DV_DW_water_energy": "水與能源",
     "CL_DV_DW_light_display": "燈光與顯示",
     "CL_DV_HOB_how_to_connect_accessories": "如何連接配件",
-    "CL_CF_SK_amount_of_servings": "份量"
+    "CL_CF_SK_amount_of_servings": "份量",
+    "CL_CF_CS_name_duplicate_tip": "設備名稱已存在",
+    "CL_DV_OV_your_oven_is_offline": "您的烤箱已離線",
+    "CL_DV_OV_offline_tips": "烤箱離線時，某些功能無法使用。嘗試重新連接烤箱。",
+    "CL_DV_OV_combi": "組合",
+    "share_account": "共享帳戶"
 }
