--- a/language/i18n_bg.json
+++ b/language/i18n_bg.json
@@ -4025,5 +4025,10 @@
     "CL_DV_DW_water_energy": "Вода и енергия",
     "CL_DV_DW_light_display": "Светлина и дисплей",
     "CL_DV_HOB_how_to_connect_accessories": "Как да свържете аксесоари",
-    "CL_CF_SK_amount_of_servings": "Количество порции"
+    "CL_CF_SK_amount_of_servings": "Количество порции",
+    "CL_CF_CS_name_duplicate_tip": "Името на уреда вече съществува",
+    "CL_DV_OV_your_oven_is_offline": "Вашата фурна е офлайн",
+    "CL_DV_OV_offline_tips": "Някои функции не могат да се използват, когато фурната е офлайн. Опитайте да свържете отново вашата фурна.",
+    "CL_DV_OV_combi": "комби",
+    "share_account": "СПОДЕЛЕНИ АКАУНТИ"
 }
