--- a/language/i18n_es.json
+++ b/language/i18n_es.json
@@ -4025,5 +4025,10 @@
     "CL_DV_DW_water_energy": "Agua y energía",
     "CL_DV_DW_light_display": "Iluminación y exhibición",
     "CL_DV_HOB_how_to_connect_accessories": "Cómo conectar accesorios",
-    "CL_CF_SK_amount_of_servings": "Cantidad de porciones"
+    "CL_CF_SK_amount_of_servings": "Cantidad de porciones",
+    "CL_CF_CS_name_duplicate_tip": "El nombre del dispositivo ya existe",
+    "CL_DV_OV_your_oven_is_offline": "Su horno está fuera de línea",
+    "CL_DV_OV_offline_tips": "Algunas funciones no se pueden utilizar cuando el horno está desconectado. Intente volver a conectar el horno.",
+    "CL_DV_OV_combi": "Combinación",
+    "share_account": "CUENTAS COMPARTIDAS"
 }
