--- a/language/i18n_fi.json
+++ b/language/i18n_fi.json
@@ -4025,5 +4025,10 @@
     "CL_DV_DW_water_energy": "Vesi & Energia",
     "CL_DV_DW_light_display": "Valo & näyttö",
     "CL_DV_HOB_how_to_connect_accessories": "Yhteydenpito-tarvikkeet",
-    "CL_CF_SK_amount_of_servings": "Annosten määrä"
+    "CL_CF_SK_amount_of_servings": "Annosten määrä",
+    "CL_CF_CS_name_duplicate_tip": "Laitteen nimi on jo olemassa",
+    "CL_DV_OV_your_oven_is_offline": "Uunisi on offline-tilassa",
+    "CL_DV_OV_offline_tips": "Joitakin toimintoja ei voi käyttää, kun uuni on offline-tilassa. Yritä kytkeä uuni uudelleen.",
+    "CL_DV_OV_combi": "combi",
+    "share_account": "JAETUT TILIT"
 }
