--- a/language/i18n_kk.json
+++ b/language/i18n_kk.json
@@ -4025,5 +4025,10 @@
     "CL_DV_DW_water_energy": "Су және энергия",
     "CL_DV_DW_light_display": "Жарық & дисплей",
     "CL_DV_HOB_how_to_connect_accessories": "Керек-жарақтарды қосу әдісі",
-    "CL_CF_SK_amount_of_servings": "Порциялар мөлшері"
+    "CL_CF_SK_amount_of_servings": "Порциялар мөлшері",
+    "CL_CF_CS_name_duplicate_tip": "Құрылғы атауы бұрыннан бар",
+    "CL_DV_OV_your_oven_is_offline": "Сіздің пешіңіз желіден тыс",
+    "CL_DV_OV_offline_tips": "Кейбір функцияларды пеш желіден тыс болғанда пайдалану мүмкін емес. Пешті қайта қосып көріңіз.",
+    "CL_DV_OV_combi": "комби",
+    "share_account": "ОРТАҚ ТЕКШЕЛГІЛЕР"
 }
