--- a/language/i18n_ms.json
+++ b/language/i18n_ms.json
@@ -4025,5 +4025,10 @@
     "CL_DV_DW_water_energy": "Air & Tenaga",
     "CL_DV_DW_light_display": "Cahaya & Paparan",
     "CL_DV_HOB_how_to_connect_accessories": "Bagaimana-Untuk Menyambung Aksesori",
-    "CL_CF_SK_amount_of_servings": "Jumlah hidangan"
+    "CL_CF_SK_amount_of_servings": "Jumlah hidangan",
+    "CL_CF_CS_name_duplicate_tip": "Nama perkakas sudah wujud",
+    "CL_DV_OV_your_oven_is_offline": "Ketuhar anda di luar talian",
+    "CL_DV_OV_offline_tips": "Sesetengah fungsi tidak boleh digunakan apabila ketuhar berada di luar talian. Cuba sambungkan semula ketuhar anda.",
+    "CL_DV_OV_combi": "kombi",
+    "share_account": "AKAUN KONGSI"
 }
