--- a/language/i18n_nl.json
+++ b/language/i18n_nl.json
@@ -4025,5 +4025,10 @@
     "CL_DV_DW_water_energy": "Water & Energie",
     "CL_DV_DW_light_display": "Licht & Display",
     "CL_DV_HOB_how_to_connect_accessories": "Hoe u accessoires aansluit",
-    "CL_CF_SK_amount_of_servings": "Aantal porties"
+    "CL_CF_SK_amount_of_servings": "Aantal porties",
+    "CL_CF_CS_name_duplicate_tip": "Apparaatnaam bestaat al",
+    "CL_DV_OV_your_oven_is_offline": "Uw oven is offline",
+    "CL_DV_OV_offline_tips": "Sommige functionaliteiten kunnen niet worden gebruikt als de oven offline is. Probeer uw oven opnieuw te verbinden.",
+    "CL_DV_OV_combi": "combi",
+    "share_account": "GEDEELDE ACCOUNTS"
 }
