--- a/language/i18n_pl.json
+++ b/language/i18n_pl.json
@@ -4025,5 +4025,10 @@
     "CL_DV_DW_water_energy": "Woda i energia",
     "CL_DV_DW_light_display": "Światło i wyświetlacz",
     "CL_DV_HOB_how_to_connect_accessories": "Instrukcja podłączania akcesoriów",
-    "CL_CF_SK_amount_of_servings": "Ilość porcji"
+    "CL_CF_SK_amount_of_servings": "Ilość porcji",
+    "CL_CF_CS_name_duplicate_tip": "Nazwa urządzenia już istnieje",
+    "CL_DV_OV_your_oven_is_offline": "Twój piekarnik jest offline",
+    "CL_DV_OV_offline_tips": "Niektóre funkcje nie mogą być używane, gdy piekarnik jest offline. Spróbuj ponownie podłączyć piekarnik.",
+    "CL_DV_OV_combi": "kombi",
+    "share_account": "KONTA WSPÓLNE"
 }
