--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -4025,5 +4025,10 @@
     "CL_DV_DW_water_energy": "Вода и энергия",
     "CL_DV_DW_light_display": "Свет и дисплей",
     "CL_DV_HOB_how_to_connect_accessories": "Как подключить аксессуары",
-    "CL_CF_SK_amount_of_servings": "Количество порций"
+    "CL_CF_SK_amount_of_servings": "Количество порций",
+    "CL_CF_CS_name_duplicate_tip": "Имя устройства уже существует",
+    "CL_DV_OV_your_oven_is_offline": "Ваша духовка не в сети",
+    "CL_DV_OV_offline_tips": "Некоторые функции не могут быть использованы, когда духовка находится в автономном режиме. Попробуйте переподключить духовку.",
+    "CL_DV_OV_combi": "комби",
+    "share_account": "ОБЩИЕ СЧЕТА"
 }
