--- a/language/i18n_sk.json
+++ b/language/i18n_sk.json
@@ -4025,5 +4025,10 @@
     "CL_DV_DW_water_energy": "Voda a energia",
     "CL_DV_DW_light_display": "Svetlo a displej",
     "CL_DV_HOB_how_to_connect_accessories": "Ako pripojiť príslušenstvo",
-    "CL_CF_SK_amount_of_servings": "Množstvo porcií"
+    "CL_CF_SK_amount_of_servings": "Množstvo porcií",
+    "CL_CF_CS_name_duplicate_tip": "Názov zariadenia už existuje",
+    "CL_DV_OV_your_oven_is_offline": "Vaša rúra je offline",
+    "CL_DV_OV_offline_tips": "Niektoré funkcie nie je možné použiť, keď je rúra offline. Skúste znova pripojiť rúru.",
+    "CL_DV_OV_combi": "kombi",
+    "share_account": "ZDIEĽANÉ ÚČTY"
 }
