--- a/language/i18n_tr.json
+++ b/language/i18n_tr.json
@@ -4025,5 +4025,10 @@
     "CL_DV_DW_water_energy": "Su ve Enerji",
     "CL_DV_DW_light_display": "Işık ve Gösterim",
     "CL_DV_HOB_how_to_connect_accessories": "Aksesuarların Nasıl Bağlanacağı",
-    "CL_CF_SK_amount_of_servings": "Porsiyon miktarı"
+    "CL_CF_SK_amount_of_servings": "Porsiyon miktarı",
+    "CL_CF_CS_name_duplicate_tip": "Cihaz adı zaten mevcut",
+    "CL_DV_OV_your_oven_is_offline": "Fırınınız çevrimdışı",
+    "CL_DV_OV_offline_tips": "Fırın çevrimdışıyken bazı işlevler kullanılamaz. Fırınınızı yeniden bağlamayı deneyin.",
+    "CL_DV_OV_combi": "kombi",
+    "share_account": "PAYLAŞILAN HESAPLAR"
 }
